# software-development-di

./: .gitignore  README.md
part_1/: CMakeLists.txt  README.md  main.cpp  todo.txt  trie.cpp  trie.h
part_1/c/: main.c  (+3 more)
part_1/c++/: CMakeLists.txt  main.cpp  trie.cpp
part_2/: README.md
part_2/src/: CMakeLists.txt  Makefile  README.md  bloomfilter.c  bloomfilter.h  defs.h  hashfunctions.c  hashfunctions.h  linearhash.c  linearhash.h  main.c  ngramcounter.c  ngramcounter.h  parser.c  parser.h  queryresults.c  queryresults.h  trie.c  trie.h  unit_test.c
part_2/src/bloomfilter/: bloomfilter.c
part_2/src/linearhash/: linearhash.c
part_2/src/ngramcounter/: ngramcounter.c  ngramcounter.h
part_2/src/parser/: parser.c
part_2/src/trie/: trie.c  trie.h
part_3/: report.odt
part_3/src/: CMakeLists.txt  Makefile  benchmark.sh  definitions.h  exec_medium.sh  execute.sh  execute_dynamic_datasets.sh  execute_static_datasets.sh  main.c  unit_test.c
part_3/src/bloomfilter/: bloomfilter.c  bloomfilter.h
part_3/src/bloomfilterstorage/: bfstorage.c  bfstorage.h
part_3/src/linearhash/: linearhash.c  linearhash.h
part_3/src/ngramcounter/: ngramcounter.c  ngramcounter.h
part_3/src/oldqueryresults/: oldqueryresults.c  oldqueryresults.h
part_3/src/parser/: parser.c  parser.h
part_3/src/querylist/: querylist.c  querylist.h
part_3/src/queryresults/: queryresults.c  queryresults.h
part_3/src/scripts/: benchmark.sh  execute_dynamic_datasets.sh  execute_static_datasets.sh
part_3/src/threadpool/: threadpool.c  threadpool.h
part_3/src/trie/: trie.c  trie.h
(+16 files in other folders)
